# sysdx

./: Cargo.toml  LICENSE  README.md  config.example.toml
.github/workflows/: ci.yml  release.yml
pkg/: .SRCINFO  PKGBUILD
src/: app.rs  config.rs  filter.rs  input.rs  main.rs  systemd.rs  theme.rs  units.rs
src/ui/: action_menu.rs  confirm_dialog.rs  help.rs  layout.rs  mod.rs  status_panel.rs  unit_file.rs  unit_list.rs
